made some changes

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,18 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "ConnectionStrings": { "DefaultConnection": "Server=Localhost;Database=Motordb;Trusted_connection=True;TrustServerCertificate=True;" },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=Localhost;Database=Motordb;Trusted_connection=True;TrustServerCertificate=True;",
+        "AuthConnection": "Server=Localhost;Database=Authdb;Trusted_connection=True;TrustServerCertificate=True;"
+    },
+    "AllowedHosts": "*",
+
+
+    "Jwt": {
+        "Key": "uF3zJ7K9yNw6vP4XbT0QcM1LaSe8RhVjYdW2GxFpZVo=",
+        "Issuer": "https://localhost:7065/",
+        "Audience": "https://localhost:7065/"
+    }
+    
+
 }
